--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,23 +28,15 @@ jobs:
       run: |
         composer install --no-dev --optimize-autoloader
 
-    - name: Deploy to Server
-      uses: appleboy/ssh-action@v0.1.6
-      with:
-        host: 34.123.197.10
-        username: gabriela_cacto
-        key: b3BlbnNzaC1rZXktdjEAAAAACmFlczI1Ni1jdHIAAAAGYmNyeXB0AAAAGAAAABBTTkJKzt
-              3LTSJXPntiRtk6AAAAEAAAAAEAAABoAAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlz
-              dHAyNTYAAABBBAEUn2DsfY/4+rOFHKntHjfOtxaywSz1y8fpwPhCEXWWSkfnwM590TINnt
-              5DMm8zS5QVRUYmFw/Y1Iw7RnHIGfsAAADQ+ZratmHDIbtt62FELYTuAyC2VsSdTHc5EpOM
-              iG41UjtL5aMDddwPhVE8/qO8kX46wSAOCzYMPEFYXQqaSE054j2vSbF/lrgHaej9FudLFg
-              gMXLNMEheRqaPaufFK38vFUojZWXFFixmboGd6+d1YvpZn2zGIg/shMn2SaB9KHaYfRNjl
-              n0ogFnc8jVk6nMCypMc4n+s09Ha5aDfW74es3w0avjVReBdJg8QodGDEEtYzpi+V8eY/Eq
-              aMIXtOxoKUElr56jPTJfWCq33e/3Ywfg==
+    - name: Setup SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H your.server.address >> ~/.ssh/known_hosts
 
-        script: |
-          cd /var/www/html
-          git pull origin master
-          composer install --no-dev --optimize-autoloader
-          php artisan migrate --force
-
+    - name: Deploy via SSH
+      run: |
+        rsync -avz --delete --exclude='.git' --exclude='node_modules' ./ user@your.server.address:/path/to/deploy/
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
