--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,10 @@ jobs:
         mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H http://34.123.197.10/ >> ~/.ssh/known_hosts
+        ssh-keyscan -H http://34.123.197.10:3000 >> ~/.ssh/known_hosts
 
     - name: Deploy via SSH
       run: |
-        rsync -avz --delete --exclude='.git' --exclude='node_modules' ./ gabriela_cacto@http://34.123.197.10/
+        rsync -avz --delete --exclude='.git' --exclude='node_modules' ./ gabriela_cacto@http://34.123.197.10:3000
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
