--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,6 @@ jobs:
 
     - name: Deploy via SSH
       run: |
-        rsync -avz --delete --exclude='.git' --exclude='node_modules' ./ gabriela_cacto@http://34.123.197.10:3000
+        rsync -avz --delete --exclude='.git' --exclude='node_modules' ./ gabriela_cacto@34.123.197.10
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
