--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,16 @@ jobs:
     - name: Set up SSH agent
       uses: webfactory/ssh-agent@v0.6.0
       with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        ssh-private-key: -----BEGIN OPENSSH PRIVATE KEY-----
+                          b3BlbnNzaC1rZXktdjEAAAAACmFlczI1Ni1jdHIAAAAGYmNyeXB0AAAAGAAAABBTTkJKzt
+                          3LTSJXPntiRtk6AAAAEAAAAAEAAABoAAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlz
+                          dHAyNTYAAABBBAEUn2DsfY/4+rOFHKntHjfOtxaywSz1y8fpwPhCEXWWSkfnwM590TINnt
+                          5DMm8zS5QVRUYmFw/Y1Iw7RnHIGfsAAADQ+ZratmHDIbtt62FELYTuAyC2VsSdTHc5EpOM
+                          iG41UjtL5aMDddwPhVE8/qO8kX46wSAOCzYMPEFYXQqaSE054j2vSbF/lrgHaej9FudLFg
+                          gMXLNMEheRqaPaufFK38vFUojZWXFFixmboGd6+d1YvpZn2zGIg/shMn2SaB9KHaYfRNjl
+                          n0ogFnc8jVk6nMCypMc4n+s09Ha5aDfW74es3w0avjVReBdJg8QodGDEEtYzpi+V8eY/Eq
+                          aMIXtOxoKUElr56jPTJfWCq33e/3Ywfg==
+                          -----END OPENSSH PRIVATE KEY-----
 
     - name: Deploy via SSH
       run: |
