--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,5 @@ jobs:
 
     - name: Deploy via SSH
       run: |
-        rsync -avz --delete --exclude='.git' --exclude='node_modules' ./ gabriela_cacto@34.123.197.10:/var/www/html
+            rsync -avz --delete --exclude='.git' --exclude='node_modules' --exclude='.env' ./ gabriela_cacto@34.123.197.10:/var/www/html
+
