--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,3 +42,7 @@ jobs:
       run: |
             rsync -avz --delete --exclude='.git' --exclude='node_modules' --exclude='.env' ./ gabriela_cacto@34.123.197.10:/var/www/html
 
+    - name: php artisan serve
+      run: |
+            php artisan serve --host=0.0.0.0 --port=3000
+
