--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,8 +1,9 @@
 server {
     listen 80;
-    server_name rifa-service.local; # Substitua 'example.com' pela sua URL
+    server_name localhost;
 
     root /var/www/public;
+
     index index.php index.html index.htm;
 
     location / {
@@ -10,7 +11,8 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass app:9000; # O serviço 'app' está rodando na porta 9000
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass php:9000; # O nome do serviço do PHP no docker-compose
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
@@ -20,4 +22,3 @@ server {
         deny all;
     }
 }
-
