--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/public;
+    root /var/www/public;  # Certifique-se de apontar para a pasta public do Laravel
 
     index index.php index.html index.htm;
 
@@ -11,11 +11,10 @@ server {
     }
 
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass php:9000; # O nome do serviço do PHP no docker-compose
+        include fastcgi_params;
+        fastcgi_pass app:9000;  # O nome do serviço PHP no docker-compose
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
     }
 
     location ~ /\.ht {
