--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   # Serviço da aplicação Laravel
-  app:
+  rifa:
     build:
       context: .
       dockerfile: Dockerfile
