--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   # Serviço da aplicação Laravel
-  app:
+  rifa:
     build:
       context: .
       dockerfile: Dockerfile
@@ -54,7 +54,7 @@ services:
       - .:/var/www
       - ./docker/nginx:/etc/nginx/conf.d
     depends_on:
-      - app
+      - rifa
     networks:
       - laravel
 
