--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -12,7 +12,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass app:9000;  # O nome do serviço PHP no docker-compose
+        fastcgi_pass rifa:9000;  # O nome do serviço PHP no docker-compose
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
