--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name rifa-service.onrender.com;
 
     root /var/www/public;  # Certifique-se de apontar para a pasta public do Laravel
 
