--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,8 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
+    expose:
+      - "9000"
     networks:
       - laravel
 
