--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;  # Utilize a variável de ambiente fornecida pelo Render
+    listen ${PORT};;  # Utilize a variável de ambiente fornecida pelo Render
 
     server_name rifa-service.onrender.com;
 
